--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,35 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="bottom"
+    android:layout_height="499px"
     android:orientation="vertical"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:padding="25dp"
-    android:background="@color/colorHorde">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView
-        android:id="@+id/drawer_name_textview"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:text="WoW Token"
-        android:textColor="@color/colorBlack"
-        android:gravity="center_horizontal"
-        android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="84px"
+        android:background="@drawable/alliancebanner"
+        android:id="@+id/banner_container">
 
-    <ImageView
-        android:id="@+id/drawer_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:src="@drawable/wowtokeniconhalf"
-        android:maxHeight="150dp"
-        android:maxWidth="150dp"
-        android:layout_gravity="center_horizontal"/>
-
-
-
-
+    </FrameLayout>
 </LinearLayout>
