--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,7 +21,8 @@
                 android:text="App Theme"
                 android:gravity="center"
                 android:textStyle="bold|italic"
-                android:textSize="20dp"/>
+                android:textSize="20dp"
+                android:textColor="@color/colorBlack"/>
 
             <RadioGroup
                 android:id="@+id/radioGroup"
