--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="https://wowtoken.info/"
+                android:text="WoW Token info: https://wowtoken.info/\nOther info: Blizzard API"
                 android:gravity="center_horizontal"
                 android:textColor="@color/colorBlack"/>
 
