--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,11 +18,11 @@
                 android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="App Theme"
                 android:gravity="center"
-                android:textStyle="bold|italic"
+                android:text="App Theme"
+                android:textColor="@color/colorBlack"
                 android:textSize="20dp"
-                android:textColor="@color/colorBlack"/>
+                android:textStyle="bold|italic" />
 
             <RadioGroup
                 android:id="@+id/radioGroup"
@@ -43,6 +43,38 @@
                     android:text="Horde Theme" />
 
             </RadioGroup>
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Home Realm"
+                android:textColor="@color/colorBlack"
+                android:textSize="20dp"
+                android:textStyle="bold|italic" />
+
+            <Spinner
+                android:id="@+id/home_realm_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Default Region"
+                android:textColor="@color/colorBlack"
+                android:textSize="20dp"
+                android:textStyle="bold|italic" />
+
+            <Spinner
+                android:id="@+id/region_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </ScrollView>
