Added text display for API result in case the WoWToken services API isn't working (like right now)
Needs fixed:
Doing a lot of work on main thread, kind've lags when loading the DataFragment

Fixed:

TODO:
Make a legitimate widget

--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -173,6 +173,16 @@
                 android:text="Updated"
                 android:textColor="@android:color/black" />
 
+            <TextView
+                android:id="@+id/apiResult"
+                style="@style/Updated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="API Result: "
+                android:textColor="@android:color/black" />
+
 
         </LinearLayout>
     </ScrollView>
