--- a/app/src/main/res/drawable/empty_rectangle.xml
+++ b/app/src/main/res/drawable/empty_rectangle.xml
@@ -4,7 +4,7 @@
     <solid android:color="#FFFFFF" />
 
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="@color/colorBlack" />
 
     <padding
@@ -13,6 +13,11 @@
         android:right="1dp"
         android:top="1dp" />
 
-    <corners android:radius="0dp" />
+    <size
+        android:height="5dp"
+        android:width="5dp"
+        />
+
+    <corners android:radius="5dp" />
 
 </shape>
