--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content">
 
                     <LinearLayout
-                        android:id="@+id/tab1"
+                        android:id="@+id/NA_Tab"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -55,7 +55,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/tab2"
+                        android:id="@+id/EU_Tab"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -63,7 +63,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/tab3"
+                        android:id="@+id/CN_Tab"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -71,7 +71,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/tab4"
+                        android:id="@+id/TW_Tab"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -79,7 +79,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/tab5"
+                        android:id="@+id/KR_Tab"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
