--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<appwidget-provider android:minWidth="140dp"
+    android:minHeight="20dp"
+    android:updatePeriodMillis="600000"
     android:initialLayout="@layout/widget_layout"
-    android:minHeight="72dp"
-    android:minWidth="300dp"
-    android:updatePeriodMillis="300000" >
+    android:resizeMode="horizontal|vertical"
+    android:widgetCategory="home_screen|keyguard"
+    android:previewImage="@drawable/alliancebanner"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 </appwidget-provider>
